﻿GNomEx Release Notes

5.1.4
--------------------
- Moved FDTFileDaemon to gnomex opensource hciFDT source tree.
- Add other organism to lucene search index.
- Add section to install notes for configuring GNomEx to use FDT



5.1.3 (Apr 19, 2011)
---------------------
- For experiment submission, default the organism and sample prep method dropdown select based on request category
- For sequencing experiment submission, only ask if samples are barcoded if the request category dictionary indicates that sample barcoding is options.
- Fix for dictionary update problem where an item is deleted when other tree items have been expanded above it.
- New month selector for billing period.
- Unusual characters such as ° and µ can now be saved/retrieved correctly in protocol description (under Materials & Meth).
- On seq submissions with multiplexed samples, sample order was scrambled after sample deleted.  Fixed by enforcing sort order on groupingCollection.
- Disallow non-admin users to edit sample multiplex number on Experiment Edit window. 
- Show sample barcode sequence alongside sequence tag name on all dropdowns (workflow, seq submission, experiment edit).
- Don't allow core prep instructions or analysis instructions to be changed at the sample/seq lane level.  For now, instructions are still
  stored at the detail level but in the UI, are shown at the experiment level.

5.1.2 (Apr 5, 2011)
---------------------
- Rename labels (Sample setup, Sequencing setup) on Request Submit confirm tab.
- On Submit window, order request category radio buttons by dictionary defined sort order.
- Be able to name experiments. Name is searchable and viewed in the experiment tree.
(Apr 12, 13 2010)
- Add 'change password' link to home page of external users (non-submitters).