@@ -299,6 +299,8 @@
 		
 		private var isInitialized:Boolean = false;
 			
+		private var lastSelectedApplication;
+			
 		private var alertButtonWidth:Number = Alert.buttonWidth
 
 		private function init():void {
@@ -446,6 +448,7 @@
 			
 			filteredMicroarrayAppList.filterFunction = filterMicroarrayApplication;
 			filteredMicroarrayAppList.refresh();
+		
 
 			filteredAppList.filterFunction = filterApplication;
 			filteredAppList.refresh();
@@ -1940,8 +1943,13 @@
 					hybSetupView.isCatalogRadio.selected = true;
 				}
 
+				
 				var application:Object = parentApplication.dictionaryManager.getEntry('hci.gnomex.model.Application', request.@codeApplication);
-				hybSetupView.microarrayAppRadioGroup.selectedValue = application[0].@value;
+				if(hybSetupView.microarrayAppRadioGroup.numRadioButtons > 0) {
+					hybSetupView.microarrayAppRadioGroup.selectedValue = application[0].@value;					
+				} else {
+					lastSelectedApplication = application[0].@value;
+				}
 				
 				hybSetupView.initializeSlideProductCombo();
 				hybSetupView.slideProductValidator.validate();
@@ -2468,7 +2476,12 @@
 			
 			if (this.isMicroarrayState()) {
 				request.@idSlideProduct = hybSetupView.slideProductCombo.selectedItem.@idSlideProduct;
-				request.@codeApplication = hybSetupView.microarrayAppRadioGroup.selectedValue;
+				if(hybSetupView.microarrayAppRadioGroup.numRadioButtons > 0) {
+					request.@codeApplication = hybSetupView.microarrayAppRadioGroup.selectedValue;				
+				} else {
+					request.@codeApplication = lastSelectedApplication;
+				}				
+								
 			} 			
 			
 			request.replace("samples", <samples></samples>); 
